# QtConcurrentDialog

./: CMakeLists.txt  README.md
form/: QThreadTask.ui
res/: QThreadTask.qrc
src/: AsyncTaskExecutor.cpp  AsyncTaskExecutor.h  QThreadTask.cpp  QThreadTask.h  main.cpp
